force-app/main/default/objects/Asset__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>ContractType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our Contract</fullName>
            </value>
            <value>
                <fullName>OEM Contract</fullName>
            </value>
            <value>
                <fullName>Competition Contract</fullName>
            </value>
            <value>
                <fullName>No Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>